recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: not found: value orange
		 	setCouleur(orange)
                                   ^