recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	var n=0;
	for(i<-99 to 0 by -1){
		 if(n==0){
		 	
		 	setCouleur(orange)
		 }
	avance(n);
	gauche(90);
	n=n+3;
	}
	
}
